components/vault-deployment/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault-system
  annotations:
    argocd.argoproj.io/sync-wave: "15"
  labels:
    name: vault-system
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
